<?xml version="1.0" encoding="utf-8"?>
<shortcuts
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <capability android:name="actions.intent.OPEN_APP_FEATURE">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.solennix.app"
            android:targetClass="com.creapolis.solennix.MainActivity">
            <parameter
                android:name="feature"
                android:key="feature" />
        </intent>
    </capability>

    <shortcut
        android:shortcutId="new_event"
        android:enabled="true"
        android:icon="@android:drawable/ic_input_add"
        android:shortcutShortLabel="@string/shortcut_new_event"
        android:shortcutLongLabel="@string/shortcut_new_event_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.solennix.app"
            android:targetClass="com.creapolis.solennix.MainActivity"
            android:data="solennix://new-event" />
        <capability-binding android:key="actions.intent.OPEN_APP_FEATURE">
            <parameter-binding android:key="feature" android:value="new-event" />
        </capability-binding>
    </shortcut>

    <shortcut
        android:shortcutId="calendar"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_today"
        android:shortcutShortLabel="@string/shortcut_calendar">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.solennix.app"
            android:targetClass="com.creapolis.solennix.MainActivity"
            android:data="solennix://calendar" />
        <capability-binding android:key="actions.intent.OPEN_APP_FEATURE">
            <parameter-binding android:key="feature" android:value="calendar" />
        </capability-binding>
    </shortcut>

    <shortcut
        android:shortcutId="quick_quote"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_edit"
        android:shortcutShortLabel="@string/shortcut_quick_quote"
        android:shortcutLongLabel="@string/shortcut_quick_quote_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.solennix.app"
            android:targetClass="com.creapolis.solennix.MainActivity"
            android:data="solennix://quick-quote" />
        <capability-binding android:key="actions.intent.OPEN_APP_FEATURE">
            <parameter-binding android:key="feature" android:value="quick-quote" />
        </capability-binding>
    </shortcut>

    <shortcut
        android:shortcutId="inventory"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_agenda"
        android:shortcutShortLabel="@string/shortcut_inventory"
        android:shortcutLongLabel="@string/shortcut_inventory_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.solennix.app"
            android:targetClass="com.creapolis.solennix.MainActivity"
            android:data="solennix://inventory" />
        <capability-binding android:key="actions.intent.OPEN_APP_FEATURE">
            <parameter-binding android:key="feature" android:value="inventory" />
        </capability-binding>
    </shortcut>
</shortcuts>
